[gd_scene load_steps=2 format=3 uid="uid://bwf4aody3dl03"]

[ext_resource type="Script" path="res://game/scripts/ui/PrologueUI.gd" id="1"]

[node name="PrologueUI" type="CanvasLayer"]
layer = 200
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.05, 0.15, 1)

[node name="BackgroundEffect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.2, 0.4, 0.3)

[node name="RainEffect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GradientOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.2)

[node name="MainContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0

[node name="TextContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 150.0
offset_right = -200.0
offset_bottom = -150.0

[node name="TitleLabel" type="Label" parent="MainContainer/TextContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.8, 0.9, 1.0, 1)
text = "雾雨之都·拉莱耶"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer/TextContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="StoryText" type="RichTextLabel" parent="MainContainer/TextContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
bbcode_enabled = true
text = ""
fit_content = true
scroll_active = false

[node name="Spacer2" type="Control" parent="MainContainer/TextContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ContinuePrompt" type="Label" parent="MainContainer/TextContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.8, 1.0, 1)
text = "按任意键继续..."
horizontal_alignment = 1

[node name="CharacterPortrait" type="TextureRect" parent="MainContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 550.0
expand_mode = 1
stretch_mode = 5

[node name="PortraitFrame" type="ColorRect" parent="MainContainer/CharacterPortrait"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 0.8)
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
